content changes on index

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <div>
             <p>This is a flower</p>
             <img src="assets/img/flowers.jpg" width="200">
+            
+            <p>This is paragraph 3. - eloy ortega</p>
         </div>
     </body>
 </html>
