--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <p>This is a flower</p>
             <img src="assets/img/flowers.jpg" width="200">
             
-            <p>This is paragraph 1. - eloy ortega</p>
-            <p>This is paragraph 2. - eloy ortega</p>
-            <p>This is paragraph 3. - eloy ortega</p>
+            <p>This is paragraph 1. - eloy</p>
+            <p>This is paragraph 2. - eloy</p>
+            <p>This is paragraph 3. - eloy</p>
         </div>
     </body>
 </html>
